fixed sizing on mobile

--- a/static/main_page.css
+++ b/static/main_page.css
@@ -278,7 +278,7 @@ body {
 
 @media screen and (max-width: 480px) {
     .name {
-        font-size: 1.3em;
+        font-size: 2.2em;
     }
     .btn-programms {
         top: 10px;
